<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_semua"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/semua_kategori" />
        <item
            android:id="@+id/nav_kategori1"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/kategori_1" />
        <item
            android:id="@+id/nav_kategori2"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/kategori_2" />
        <item
            android:id="@+id/nav_kategori3"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/kategori_3" />
    </group>

</menu>
