<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DeskripsiActivity"
    tools:showIn="@layout/activity_deskripsi">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/des_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars[10]"
                android:contentDescription="@string/content_desc" />

            <TextView
                android:id="@+id/nam_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/har_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:gravity="center_horizontal"/>

            <TextView
                android:id="@+id/des_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/des_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/kat_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kategori"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/kat_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>